[package]
name = "plug_wrong_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Old version from crates.io
picodata-plugin = "24.6"
serde = { version = "1.0.197", features = ["derive"] }
