[package]
name = "testplug"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
picodata-plugin = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
time-macros = "0.2.6"
time = { workspace = true } # not used directly, but referenced by macro expansions from time-macros

[lib]
crate-type = ["lib", "cdylib"]
